# nikman

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  credits.txt
.github/workflows/: ubuntu-build.yml  windows-build.yml
docs/installer/: CreateWindowsInstaller.md
include/: CMakeLists.txt  entity.h  game.h  level.h  shader.h  ui.h  utility.h
installer/: NikmanInstaller.wxs  SampleFirst.wxs  comandi.bat
installer/Windows/: Folders.wxs  GameComponents.wxs  LICENSE.rtf  NoLicenseUI.wxs  Package.en-us.wxl  Package.wxs  x64CreateInstaller.ps1
installer/Windows/scripts/: CreateResourcesWIXComponents.ps1  CreateWIXComponents.ps1
other/: dimensioni.txt
other/centaur/: centaur_regular_32.xml
other/libellids/: init_maze.py  istruzioni.txt  spispopd1.txt
other/texture/: atlas.xcf
resources/levels/: level.txt  level2.txt  level3.txt  level4.txt  list.txt  livello1.txt  livello2.txt  livello3.txt  livello4.txt  livello5.txt  livello_cervello.txt  livello_jemel.txt  livello_ragno.txt  livello_scimmia.txt  livello_uccello.txt  pacman.txt  spispopd1.txt  spispopd2.txt
shaders/: RandomGuy.frag  background.frag  background.vert  crust.frag  crust.vert  ghost.frag  ghost.vert  glyph.frag  glyph.vert  map.frag  map.vert  player.frag  sfondo.frag  sfondo.vert  sword.frag  teleport.frag  tile.frag  wall.frag  wall.vert
src/: CMakeLists.txt  Nikman.rc  launcher.cpp  main.cpp  maze.cpp  resource.h
